# files-to-claude-xml

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  files-to-claude-xml.py  files_to_claude_xml.py  justfile  pyproject.toml
